--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vitest": "0.33.0"
   },
   "dependencies": {
+    "@fastify/jwt": "7.2.0",
     "@prisma/client": "5.0.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.9",
