--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "npm link ./prisma/vitest-environment-prisma && npm link vitest-environment-prisma",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui --api 9527"
   },
@@ -21,10 +22,12 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.2",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-v8": "0.33.0",
     "@vitest/ui": "0.33.0",
     "eslint": "8.45.0",
     "prisma": "5.0.0",
+    "supertest": "6.3.3",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
